<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notification"
        android:title="@string/menu_3"
        android:checked="false"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/property"
        android:title="@string/menu_2"
        android:checked="true"
        android:icon="@drawable/ic_location_city_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile"
        android:title="@string/menu_1"
        android:checked="false"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="ifRoom"/>
</menu>