<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.goldenxtime.com.goldenxtime.view.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/logoIV"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/edit_text_bg"
            android:padding="8dp"
            android:maxLines="1"
            android:textAlignment="center"
            android:hint="@string/username"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAlignment="center"
            android:maxLines="1"
            android:hint="@string/password"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/rememberTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/loginB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:textColor="@color/whiteColor"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>
